menu e organização da pagina

--- a/index.html
+++ b/index.html
@@ -1,15 +1,182 @@
 <!doctype html>
 <html>
+<style>
+.sist1{
+    background-color: aquamarine;
+}
+.sist2{
+    background-color: brown;
+}
+</style>
+
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Antonystar</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 </head>
+
 <body>
-    <div >
-        <h1>Antonystar site teste</h1>
-        <h2>Teste de usuario</h2>
-        <h3>teste git</h3>
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Antonystar" width="30" height="30"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sistd">sistemas desenvolvidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tec">tecnologias</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#form">formação</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#exp">experiencia profissional</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#ms">Mini sistemas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#cont">contatos</a>
+                    </li>
+
+                </ul>
+            </div>
+
+    </nav>
+
+    <div class="container-fluid">
+        <span href="#"><br><br><br><br><br></span>
+        <h1><code><</code>DESENVOLVEDOR BACK-END<code>/></code></h1>
+        <h2>objetivo</h2>
+        <P>Pretendo assumir vagas de estágio ou desenvolvedor júnior com foco no desenvolvimento de novas tecnologias e
+            manutenção de sistemas. Até o momento não trabalhei em empresas de desenvolvimento, mas possuo alguns
+            conhecimentos com programação na qual adquiri por meio de projetos pessoais, lecionando aulas, criando
+            sistema para TCC e montando sistemas para a empresa Capital Cursos no objetivo de facilitar o meu trabalho
+            no periodo que trabalhei la. Segue abaixo algumas de minhas conquistas.</p>
+        <span id="sistd"><br><br><br><br><br></span>
+        <h2>Sistemas desenvolvidos</h2>
+        <div class="col-12">
+            <div class="col-4 sist1">
+                <h4>WEB PORTAL CURSOS:</h4>
+                <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JS</li>
+                    <li>PHP</li>
+                    <li>Mysql</li>
+
+                </ul>
+                <span>Função:</span>
+                <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                    promossionais,
+                    padrões e venda direta.</p>
+                <span>Tipo:</span>
+                <p>Pessoal</p>
+                <span>Link:</span>
+                <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
+                <span>Tempo:</span>
+                <p>7 meses</p>
+                <span>Usuario:</span>
+                <p>admin</p>
+                <span>Senha:</span>
+                <p>senha</p>
+            </div>
+            <div class="col-4 sist2">
+                <h4>WEB PORTAL CURSOS:</h4>
+                <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Bootstrap</li>
+                    <li>JS</li>
+                    <li>PHP</li>
+                    <li>Mysql</li>
+
+                </ul>
+                <span>Função:</span>
+                <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                    promossionais,
+                    padrões e venda direta.</p>
+                <span>Tipo:</span>
+                <p>Pessoal</p>
+                <span>Link:</span>
+                <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
+                <span>Tempo:</span>
+                <p>7 meses</p>
+                <span>Usuario:</span>
+                <p>admin</p>
+                <span>Senha:</span>
+                <p>senha</p>
+            </div>
+        </div>
+
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <span id="tec"><br><br><br><br><br></span>
+        <h2>teconologias que domino</h2>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <span id="form"><br><br><br><br><br></span>
+        <h2>Formação</h2>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <span id="exp"><br><br><br><br><br></span>
+        <h2>Experiencia Profisional</h2>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <span id="ms"><br><br><br><br><br></span>
+        <h2>Mini Sistemas</h2>
+        <p>Segue alguns pequenos codigos que desenvolvi e achei interessante expor no meu portifólio</p>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <span id="cont"><br><br><br><br><br></span>
+        <h2>Contatos</h2>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
     </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
