--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <style>
-.sist1{
-    background-color: aquamarine;
-}
-.sist2{
-    background-color: brown;
-}
+    .sist1 {
+        background-color: aquamarine;
+    }
+
+    .sist2 {
+        background-color: brown;
+    }
 </style>
 
 <head>
@@ -19,6 +20,7 @@
 </head>
 
 <body>
+    <!--MENU-->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Antonystar" width="30" height="30"></a>
@@ -53,8 +55,8 @@
 
                 </ul>
             </div>
-
     </nav>
+    <!--fim MENU-->
 
     <div class="container-fluid">
         <span href="#"><br><br><br><br><br></span>
@@ -65,71 +67,115 @@
             conhecimentos com programação na qual adquiri por meio de projetos pessoais, lecionando aulas, criando
             sistema para TCC e montando sistemas para a empresa Capital Cursos no objetivo de facilitar o meu trabalho
             no periodo que trabalhei la. Segue abaixo algumas de minhas conquistas.</p>
+        <!--SISTEMAS DESENVOLVIDOS-->
         <span id="sistd"><br><br><br><br><br></span>
         <h2>Sistemas desenvolvidos</h2>
-        <div class="col-12">
-            <div class="col-4 sist1">
-                <h4>WEB PORTAL CURSOS:</h4>
-                <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Bootstrap</li>
-                    <li>JS</li>
-                    <li>PHP</li>
-                    <li>Mysql</li>
 
-                </ul>
-                <span>Função:</span>
-                <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
-                    promossionais,
-                    padrões e venda direta.</p>
-                <span>Tipo:</span>
-                <p>Pessoal</p>
-                <span>Link:</span>
-                <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
-                <span>Tempo:</span>
-                <p>7 meses</p>
-                <span>Usuario:</span>
-                <p>admin</p>
-                <span>Senha:</span>
-                <p>senha</p>
-            </div>
-            <div class="col-4 sist2">
-                <h4>WEB PORTAL CURSOS:</h4>
-                <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Bootstrap</li>
-                    <li>JS</li>
-                    <li>PHP</li>
-                    <li>Mysql</li>
+        <div class="col-12 container">
+            <div class="row">
 
-                </ul>
-                <span>Função:</span>
-                <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
-                    promossionais,
-                    padrões e venda direta.</p>
-                <span>Tipo:</span>
-                <p>Pessoal</p>
-                <span>Link:</span>
-                <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
-                <span>Tempo:</span>
-                <p>7 meses</p>
-                <span>Usuario:</span>
-                <p>admin</p>
-                <span>Senha:</span>
-                <p>senha</p>
+                <!---SISTEMA 1-->
+                <div class="col-4 bg-danger">
+                    <div class="sist1 bg-info">
+                        <h4>WEB PORTAL CURSOS:</h4>
+                        <span>Função:</span>
+                        <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                            promocionais, padrões e venda direta.</p>
+                        <span>Tecnologias:</span>
+                        <div class="col-12">
+                            <div >
+                                <ul class="row"  >
+                                    <li class="col-6"><img src="img/html-logo.png" width="25px">HTML</li>
+                                    <li class="col-6"><img src="img/css-logo.png" width="25px">CSS</li>
+                                    <li class="col-6"><img src="img/bootstrap-logo-vector.svg" width="25px">Bootstrap</li>
+                                    <li class="col-6"><img src="img/js-logo.png" width="25px">JS</li>
+                                    <li class="col-6"><img src="img/new-php-logo.svg" width="25px">PHP</li>
+                                    <li class="col-6"><img src="img/mysql.png" width="25px">Mysql</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col-6">
+                                    <span>Tipo:</span>
+                                    <span>Pessoal</span>
+                                </div>
+                                <div class="col-6">
+                                    <span>Produção:</span>
+                                    <span>7 meses</span>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <span>Link:</span>
+                        <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
+                        <div class="col-12">
+                            <div class="row">
+                                <div>Login administrativo</div>
+                                <div class="col-6">
+                                    <span>Usuario:</span>
+                                    <p>admin</p>
+                                </div>
+                                <div class="col-6">
+                                    <span>Senha:</span>
+                                    <p>senha</p>
+                                </div>
+                                <div>Login funcionario</div>
+                                <div class="col-6">
+                                    <span>Usuario:</span>
+                                    <p>admin</p>
+                                </div>
+                                <div class="col-6">
+                                    <span>Senha:</span>
+                                    <p>senha</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <span>Repositório GitHub:</span>
+                        <p><a href="https://github.com/antonystar-dev/wpc" target="_blank">antonystar-dev/wpc</a></p>
+
+
+                    </div>
+                </div>
+
+                <!---SISTEMA 2-->
+                <div class="col-4 sist2">
+                    <h4>WEB PORTAL CURSOS:</h4>
+                    <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>JS</li>
+                        <li>PHP</li>
+                        <li>Mysql</li>
+
+                    </ul>
+                    <span>Função:</span>
+                    <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                        promossionais,
+                        padrões e venda direta.</p>
+                    <span>Tipo:</span>
+                    <p>Pessoal</p>
+                    <span>Link:</span>
+                    <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
+                    <span>GitHub:</span>
+                    <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
+                    <span>Tempo:</span>
+                    <p>7 meses</p>
+                    <span>Usuario:</span>
+                    <p>admin</p>
+                    <span>Senha:</span>
+                    <p>senha</p>
+                </div>
+                <!---fim SISTEMAS-->
             </div>
+
         </div>
+        <!--fim SISTEMAS DESENVOLVIDOS-->
 
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <span id="tec"><br><br><br><br><br></span>
         <h2>teconologias que domino</h2>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -173,7 +219,7 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     </div>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
