css sistemas desenvolvidos

--- a/index.html
+++ b/index.html
@@ -2,13 +2,37 @@
 <html>
 <style>
     .sist1 {
-        background-color: aquamarine;
+        border-radius: 10px 0 10px 0;
+        padding: 5%;
+        background-color: rgb(103, 153, 197);
+
+    }
+    .sist2 {
+        border-radius: 10px 0 10px 0;
+        padding: 5%;
+        background-color: rgb(157, 233, 157)
+
     }
 
-    .sist2 {
-        background-color: brown;
+
+
+
+    .txtPedaco {
+        text-decoration: rgb(128, 40, 40);
+        font-weight: bold;
     }
 </style>
+<script>
+    function Mudarestado(sistema1) {
+
+        var display = document.getElementById(sistema1).style.display;
+        if (display == "none")
+            document.getElementById(sistema1).style.display = 'block';
+        else
+            document.getElementById(sistema1).style.display = 'none';
+    }
+
+</script>
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +43,7 @@
 
 </head>
 
-<body>
+<body style="font-family: sans-serif;">
     <!--MENU-->
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
@@ -71,106 +95,182 @@
         <span id="sistd"><br><br><br><br><br></span>
         <h2>Sistemas desenvolvidos</h2>
 
-        <div class="col-12 container">
+
+
+
+        <div class="col-6 container ">
+            <div>
+                <button type="button" onclick="Mudarestado('sistema1')" class="btn btn-primary">WPC</button>
+                <button type="button" onclick="Mudarestado('sistema2')" class="btn btn-primary">sist 2</button>
+            </div>
+            <br>
+            <p>Escolha algum sistema acima para mais informações:</p>
             <div class="row">
 
                 <!---SISTEMA 1-->
-                <div class="col-8 bg-danger">
-                    <div class="sist1 bg-info">
-                        <h4>WEB PORTAL CURSOS:</h4>
-                        <span>Função:</span>
+                <div id="sistema1" style="display:none" class="col-12 text-white">
+                    <div class="sist1">
+                        <h4 class="text-white">WEB PORTAL CURSOS:</h4>
+                        <span class="txtPedaco">Função:</span>
                         <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
                             promocionais, padrões e venda direta.</p>
-                        <span>Tecnologias:</span>
+                        <span class="txtPedaco">Tecnologias:</span>
                         <div class="col-12">
-                            <div >
-                                <ul class="row"  >
-                                    <li class="col-6"><img src="img/html-logo.png" width="25px">HTML</li>
-                                    <li class="col-6"><img src="img/css-logo.png" width="25px">CSS</li>
-                                    <li class="col-6"><img src="img/bootstrap-logo-vector.svg" width="25px">Bootstrap</li>
-                                    <li class="col-6"><img src="img/js-logo.png" width="25px">JS</li>
-                                    <li class="col-6"><img src="img/new-php-logo.svg" width="25px">PHP</li>
-                                    <li class="col-6"><img src="img/mysql.png" width="25px">Mysql</li>
+                            <div>
+                                <ul class="row">
+                                    <li class="col-2 list-group-item"><img src="img/html-logo.png" width="25px">HTML
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/css-logo.png" width="25px">CSS</li>
+                                    <li class="col-2 list-group-item"><img src="img/bootstrap-logo-vector.svg"
+                                            width="25px">Bootstrap
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/js-logo.png" width="25px">JS</li>
+                                    <li class="col-2 list-group-item"><img src="img/new-php-logo.svg" width="25px">PHP
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/mysql.png" width="25px">Mysql</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="row">
-                                <div class="col-6">
-                                    <span>Tipo:</span>
+                                <div class="col-4">
+                                    <span class="txtPedaco">Tipo:</span>
                                     <span>Pessoal</span>
                                 </div>
-                                <div class="col-6">
-                                    <span>Produção:</span>
+                                <div class="col-4">
+                                    <span class="txtPedaco">Produção:</span>
                                     <span>7 meses</span>
                                 </div>
+                                <div class="col-4">
+                                    <span class="txtPedaco">Link:</span>
+                                    <span><a href="https://wpc.antonystar.com/"
+                                            target="_blank">wpc.antonystar.com</a></span>
+                                </div>
 
                             </div>
                         </div>
+                        <hr />
 
-                        <span>Link:</span>
-                        <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
                         <div class="col-12">
                             <div class="row">
-                                <div>Login administrativo</div>
+                                <div class="txtPedaco">Login administrativo</div>
                                 <div class="col-6">
-                                    <span>Usuario:</span>
+                                    <span class="txtPedaco">Usuario:</span>
                                     <p>admin</p>
                                 </div>
                                 <div class="col-6">
-                                    <span>Senha:</span>
+                                    <span class="txtPedaco">Senha:</span>
                                     <p>senha</p>
                                 </div>
-                                <div>Login funcionario</div>
+                                <div class="txtPedaco">Login funcionario</div>
                                 <div class="col-6">
-                                    <span>Usuario:</span>
+                                    <span class="txtPedaco">Usuario:</span>
                                     <p>admin</p>
                                 </div>
                                 <div class="col-6">
-                                    <span>Senha:</span>
+                                    <span class="txtPedaco">Senha:</span>
                                     <p>senha</p>
                                 </div>
 
                             </div>
                         </div>
-                        <span>Repositório GitHub:</span>
-                        <p><a href="https://github.com/antonystar-dev/wpc" target="_blank">antonystar-dev/wpc</a></p>
+                        <hr />
+                        <span class="txtPedaco">Repositório GitHub:</span>
+                        <span><a href="https://github.com/antonystar-dev/wpc"
+                                target="_blank">antonystar-dev/wpc</a></span>
+                        <br>
+                        <span class="txtPedaco">Atualizações futuras:</span><span> Pretendo atualizar para a versão 2.0
+                            com a inclusão de perfils individuais, transformando em diversos sites diferentes</span>
 
 
                     </div>
                 </div>
 
                 <!---SISTEMA 2-->
-                <div class="col-4 sist2">
-                    <h4>WEB PORTAL CURSOS:</h4>
-                    <span>Tecnologias:</span><!--colocar em lista ordenada as tecnologias-->
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap</li>
-                        <li>JS</li>
-                        <li>PHP</li>
-                        <li>Mysql</li>
+               
+                <div id="sistema2" style="display:none" class="col-12 text-white">
+                    <div class="sist2">
+                        <h4 class="text-white">+Saúde</h4>
+                        <span class="txtPedaco">Função:</span>
+                        <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                            promocionais, padrões e venda direta.</p>
+                        <span class="txtPedaco">Tecnologias:</span>
+                        <div class="col-12">
+                            <div>
+                                <ul class="row">
+                                    <li class="col-2 list-group-item"><img src="img/html-logo.png" width="25px">HTML
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/css-logo.png" width="25px">CSS</li>
+                                    <li class="col-2 list-group-item"><img src="img/bootstrap-logo-vector.svg"
+                                            width="25px">Bootstrap
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/js-logo.png" width="25px">JS</li>
+                                    <li class="col-2 list-group-item"><img src="img/new-php-logo.svg" width="25px">PHP
+                                    </li>
+                                    <li class="col-2 list-group-item"><img src="img/mysql.png" width="25px">Mysql</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="col-4">
+                                    <span class="txtPedaco">Tipo:</span>
+                                    <span>Pessoal</span>
+                                </div>
+                                <div class="col-4">
+                                    <span class="txtPedaco">Produção:</span>
+                                    <span>7 meses</span>
+                                </div>
+                                <div class="col-4">
+                                    <span class="txtPedaco">Link:</span>
+                                    <span><a href="https://wpc.antonystar.com/"
+                                            target="_blank">wpc.antonystar.com</a></span>
+                                </div>
 
-                    </ul>
-                    <span>Função:</span>
-                    <p>Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
-                        promossionais,
-                        padrões e venda direta.</p>
-                    <span>Tipo:</span>
-                    <p>Pessoal</p>
-                    <span>Link:</span>
-                    <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
-                    <span>GitHub:</span>
-                    <p><a href="https://wpc.antonystar.com/" target="_blank">wpc.antonystar.com</a></p>
-                    <span>Tempo:</span>
-                    <p>7 meses</p>
-                    <span>Usuario:</span>
-                    <p>admin</p>
-                    <span>Senha:</span>
-                    <p>senha</p>
+                            </div>
+                        </div>
+                        <hr />
+
+                        <div class="col-12">
+                            <div class="row">
+                                <div class="txtPedaco">Login administrativo</div>
+                                <div class="col-6">
+                                    <span class="txtPedaco">Usuario:</span>
+                                    <p>admin</p>
+                                </div>
+                                <div class="col-6">
+                                    <span class="txtPedaco">Senha:</span>
+                                    <p>senha</p>
+                                </div>
+                                <div class="txtPedaco">Login funcionario</div>
+                                <div class="col-6">
+                                    <span class="txtPedaco">Usuario:</span>
+                                    <p>admin</p>
+                                </div>
+                                <div class="col-6">
+                                    <span class="txtPedaco">Senha:</span>
+                                    <p>senha</p>
+                                </div>
+
+                            </div>
+                        </div>
+                        <hr />
+                        <span class="txtPedaco">Repositório GitHub:</span>
+                        <span><a href="https://github.com/antonystar-dev/wpc"
+                                target="_blank">antonystar-dev/wpc</a></span>
+                        <br>
+                        <span class="txtPedaco">Atualizações futuras:</span><span> Pretendo atualizar para a versão 2.0
+                            com a inclusão de perfils individuais, transformando em diversos sites diferentes</span>
+
+
+                    </div>
                 </div>
-                <!---fim SISTEMAS-->
+
+             
+
+
+
+               <!-- fim SISTEMAS-->
             </div>
 
         </div>
