--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
     <div class="div-viewport">&nbsp;
-
+<div>ESPAÇO DO MENU SOMENTE COMO TESTE<br><br>
+</div>
         <!--MENU
     <?php include 'menu.php';?>
     fim MENU-->
@@ -43,16 +44,17 @@
         </div>
         <div class="central">
             <div class="conteudo">
+                <div class="div-imgeu">
+                    <img class="imgeu" src="img/eu.png">
+                </div>
                 <div class="home-dados">
                     <h1>
-                        <code><</code>DEV BACK-END<code>/></code>
+                        <code><</code>DESENVOLVEDOR BACK-END<code>/></code>
 
                     </h1>
                     <h1>Antônio Araujo Muniz</h1>
                 </div>
-                <div class="div-imgeu">
-                    <img class="imgeu" src="img/eu.png">
-                </div>
+                
 
 
 
@@ -61,7 +63,7 @@
 
 
 
-
+            </div>
             </div>
         </div>
 
