Layout Home e Sobre - Responsivo todas as telas

--- a/index.html
+++ b/index.html
@@ -15,117 +15,120 @@
 </head>
 
 <body>
-    <div class="div-viewport">&nbsp;
-        <div>ESPAÇO DO MENU SOMENTE COMO TESTE<br><br>
-        </div>
+    <div>ESPAÇO DO MENU SOMENTE COMO TESTE - colocar dentro da class central na linha 1
+    </div>
+    <div class="central">
 
-        <!--DIV COLUNAS - BASE-->
-        <div class="central">
-            <div class="col1">&nbsp;</div>
-            <div class="col2">&nbsp;</div>
-            <div class="col3">&nbsp;</div>
-            <div class="col4">&nbsp;</div>
-            <div class="col5">&nbsp;</div>
-            <div class="col6">&nbsp;</div>
-            <div class="col7">&nbsp;</div>
-            <div class="col8">&nbsp;</div>
-            <div class="col9">&nbsp;</div>
-            <div class="col10">&nbsp;</div>
-            <div class="col11">&nbsp;</div>
-            <div class="col12">&nbsp;</div>
+        <div class="div-viewport">
+            <!--DIV COLUNAS - BASE-->
 
-            <br>
+            <div class="col1">1</div>
+            <div class="col2">2</div>
+            <div class="col3">3</div>
+            <div class="col4">4</div>
+            <div class="col5">5</div>
+            <div class="col6">6</div>
+            <div class="col7">7</div>
+            <div class="col8">8</div>
+            <div class="col9">9</div>
+            <div class="col10">10</div>
+            <div class="col11">11</div>
+            <div class="col12">12</div>
+
 
 
             <!--DIV COLUNAS - BASE-->
-        </div>
-        <div class="central">
-            <div class="conteudo">
-                <div class="grid">
-                    <div class="div-imgeu">
-                        <img class="imgeu" src="img/eu.png">
-                    </div>
-                    <div class="home-dados">
-                        <h1>
-                            <code><</code>DESENVOLVEDOR BACK-END<code>/></code>
-                        </h1>
-                        <h1>Antônio Araujo Muniz</h1>
-                    </div>
-                </div>
-                <div class="grid">
-                    <div class="sobre">
-                        <h2 class="titulo-identificador">Sobre</h2>
-                        <p class="txt1">
-                            Busco oportunidades de estágio ou desenvolvedor júnior. Apesar da falta de experiência
-                            em empresas de desenvolvimento, adquiri conhecimentos em programação por meio de
-                            iniciativas pessoais e projetos diversos. Minha trajetória inclui a ministração de aulas
-                            (HTML, CSS, PHP e MYSQL) pela empresa <a class="link-semFormatacao"
-                                href="https://www.instagram.com/capitalcursos/" target="_blank">Capital Cursos</a>, o
-                            desenvolvimento de sistemas para meu <a class="link-semFormatacao"
-                                href="http://etcdf.com.br/" target="_blank">Trabalho de
-                                Conclusão de Curso (TCC)</a> e a criação de uma solução para a empresa Capital Cursos,
-                            onde otimizei processos. Essas experiências contribuíram significativamente para minha
-                            formação e habilidades técnicas.
-                        </p>
-
-                    </div>
-
-                    <div class="contatos">
-                        <h2 class="titulo-identificador">Contatos</h2>
-                        <a href="https://github.com/antonystar-dev" target="_blank"><img class="logo-contatos"
-                                src="img/git-logo.png" title="Git Hub"></a>
-                        <a href="https://www.linkedin.com/in/AntonioAraujoMuniz/" target="_blank"><img
-                                class="logo-contatos" src="img/git-logo.png" title="Linkedin"></a>
-                        <a href="http://antonystar.com/cv.pdf" target="_blank"><img class="logo-contatos"
-                                src="img/git-logo.png" title="Curriculo"></a>
-
-                    </div>
-                    <div class="formacao">
-                        <h2 class="titulo-identificador">Formação</h2>
-                        <ul class="txt1">
-                            <li>
-                                Faculdade:
-                                <ul>
-                                    <li>Analise e desenvolvimento de sistemas - IESB - 2º Semestre</li>
-                                    <li>Segurança da Informação - UCB - 4º Semestre</li>
-
-                                </ul>
-                            </li>
-                            <li>
-                                Curso Técnico:
-                                <ul>
-                                    <li>Curso técnico em informatica - ETC - Concluído 2018</li>
-                                </ul>
-                            </li>
-                            <li>
-                                Certificações:
-                                <ul>
-                                    <li>Certificação Fundamentos na Lei Geral de Dados - #####- Concluído 2023</li>
-                                    <li> HDI Dast - HDI - Concluído 2021</li>
-
-                                </ul>
-                            </li>
-
-                        </ul>
-
-                    </div>
-                </div>
 
 
+<!---->
+
+            <div class="div-imgeu">
+                <img class="imgeu" src="img/eu.png">
+            </div>
+            <div class="home-dados">
+                <h1>
+                    <code><</code>DESENVOLVEDOR BACK-END<code>/></code>
+                </h1>
+                <h1>Antônio Araujo Muniz</h1>
+            </div>
 
 
-
-
-
+            <div class="sobre">
+                <h2 class="titulo-identificador">Sobre</h2>
+                <p class="txt1">
+                    Busco oportunidades de estágio ou desenvolvedor júnior. Apesar da falta de experiência
+                    em empresas de desenvolvimento, adquiri conhecimentos em programação por meio de
+                    iniciativas pessoais e projetos diversos.</p>
+                    <p class="txt1">Minha trajetória inclui a ministração de aulas
+                    (HTML, CSS, PHP e MYSQL) pela empresa <a class="link-semFormatacao"
+                        href="https://www.instagram.com/capitalcursos/" target="_blank">Capital Cursos</a>, o
+                    desenvolvimento de sistemas para meu <a class="link-semFormatacao" href="http://etcdf.com.br/"
+                        target="_blank">Trabalho de
+                        Conclusão de Curso (TCC)</a> e a criação de uma solução para a empresa Capital Cursos,
+                    onde otimizei processos. Essas experiências contribuíram significativamente para minha
+                    formação e habilidades técnicas.
+                </p>
 
             </div>
-        </div>
+
+            <div class="contatos">
+                <h2 class="titulo-identificador">Contatos</h2>
+                <div class="div-logo-contatos">
+                <a href="https://github.com/antonystar-dev" target="_blank"><img class="logo-contatos"
+                        src="img/git-logo.png" title="Git Hub"></a>
+                <a href="https://www.linkedin.com/in/AntonioAraujoMuniz/" target="_blank"><img class="logo-contatos"
+                        src="img/git-logo.png" title="Linkedin"></a>
+                <a href="http://antonystar.com/cv.pdf" target="_blank"><img class="logo-contatos" src="img/git-logo.png"
+                        title="Curriculo"></a>
+                </div>
+            </div>
+            <div class="formacao">
+                <h2 class="titulo-identificador">Formação</h2>
+                <ul class="txt1">
+                    <li>
+                        Faculdade:
+                        <ul>
+                            <li>Analise e desenvolvimento de sistemas - IESB - 2º Semestre</li>
+                            <li>Segurança da Informação - UCB - 4º Semestre</li>
+
+                        </ul>
+                    </li>
+                    <li>
+                        Curso Técnico:
+                        <ul>
+                            <li>Curso técnico em informatica - ETC - Concluído 2018</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Certificações:
+                        <ul>
+                            <li>Certificação Fundamentos na Lei Geral de Dados - #####- Concluído 2023</li>
+                            <li> HDI Dast - HDI - Concluído 2021</li>
+
+                        </ul>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div><!--Fim da VIEWPORT levar na separação de conteudo-->
+
+
+
+
+
+
+
+
+
+    </div>
     </div>
 
 
 
 
-    </div>
+
+
 </body>
 
 </html>
