--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Antonystar</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
     <script type="text/javascript" src="js/func.js"></script>
     <style>
@@ -40,7 +40,7 @@
             <!--DIV COLUNAS - BASE-->
 
 
-<!---->
+            <!---->
 
             <div class="div-imgeu">
                 <img class="imgeu" src="img/eu.png">
@@ -59,7 +59,7 @@
                     Busco oportunidades de estágio ou desenvolvedor júnior. Apesar da falta de experiência
                     em empresas de desenvolvimento, adquiri conhecimentos em programação por meio de
                     iniciativas pessoais e projetos diversos.</p>
-                    <p class="txt1">Minha trajetória inclui a ministração de aulas
+                <p class="txt1">Minha trajetória inclui a ministração de aulas
                     (HTML, CSS, PHP e MYSQL) pela empresa <a class="link-semFormatacao"
                         href="https://www.instagram.com/capitalcursos/" target="_blank">Capital Cursos</a>, o
                     desenvolvimento de sistemas para meu <a class="link-semFormatacao" href="http://etcdf.com.br/"
@@ -74,12 +74,12 @@
             <div class="contatos">
                 <h2 class="titulo-identificador">Contatos</h2>
                 <div class="div-logo-contatos">
-                <a href="https://github.com/antonystar-dev" target="_blank"><img class="logo-contatos"
-                        src="img/git-logo.png" title="Git Hub"></a>
-                <a href="https://www.linkedin.com/in/AntonioAraujoMuniz/" target="_blank"><img class="logo-contatos"
-                        src="img/git-logo.png" title="Linkedin"></a>
-                <a href="http://antonystar.com/cv.pdf" target="_blank"><img class="logo-contatos" src="img/git-logo.png"
-                        title="Curriculo"></a>
+                    <a href="https://github.com/antonystar-dev" target="_blank"><img class="logo-contatos"
+                            src="img/git-logo.png" title="Git Hub"></a>
+                    <a href="https://www.linkedin.com/in/AntonioAraujoMuniz/" target="_blank"><img class="logo-contatos"
+                            src="img/git-logo.png" title="Linkedin"></a>
+                    <a href="http://antonystar.com/cv.pdf" target="_blank"><img class="logo-contatos"
+                            src="img/git-logo.png" title="Curriculo"></a>
                 </div>
             </div>
             <div class="formacao">
@@ -111,14 +111,147 @@
                 </ul>
 
             </div>
+
+
+
+            <div class="div-viewport-projetos">
+                <h2 class="titulo-identificador">Projetos</h2>
+            </div>
+            <!---SISTEMA 1-->
+            <div class="sistema1">
+                <h4 class="titulo-sistema-az">LOGIN DE 2 FATORES</h4>
+                <span class="subtitulo-sistema-az">Função:</span>
+                <p>Realizar a autenticação com verificação de 2 fatores dos usuarios cadastrados, utilizando o
+                    e-mail
+                    como
+                    alternativa</p>
+                <span class="subtitulo-sistema-az">Tecnologias:</span>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/html-logo.png" title="teste"></span>
+                    <span><img class="logo-tecnologia" src="img/css-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/js-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/new-php-logo.svg" width="55px">
+                    </span>
+                    <span><img class="logo-tecnologia" src="img/mysql.png"></span>
+                </div>
+
+                <br>
+                <span class="subtitulo-sistema-az">Tipo:</span>
+                <span>Pessoal</span>
+                <br>
+                <hr />
+                <span class="subtitulo-sistema-az">Login:</span>
+                <span> Olá visitante, nessa etapa será necessario que faça o cadastro no sistema para testar as
+                    funcionalidades.</span>
+                <hr />
+                <a href="https://2fatores.antonystar.com/" target="_blank" class="bt-testar">Testar</a>
+                <a href="https://github.com/antonystar-dev/autenticacaodoisfatores" target="_blank"
+                    class="bt-github">GitHub</a>
+                <a href="#" class="bt-screen">Screenshot</a><BR>
+                <br>
+                <span class="subtitulo-sistema-az">Atualizações futuras:</span><br><span> Pretendo reestruturar o
+                    sistema removendo o carregamento do front-end pelo javascript, e atualizar os links com
+                    microserviços em JAVA ou
+                    PHP.</span><br><br>
+                <div class="alerta-situacao-emdev">EM DESENVOLVIMENTO</div>
+            </div>
+            <!---SISTEMA 2-->
+            <div class="sistema2">
+                <h4 class="titulo-sistema-br">MAIS SAÚDE</h4>
+                <span class="subtitulo-sistema-br">Função:</span>
+                <p>Plataforma na qual exibe a disponibilidade dos serviços nas unidades de saúde do Distrito
+                    Federal.
+                </p>
+                <span class="subtitulo-sistema-br">Tecnologias:</span>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/html-logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/css-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/js-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/bootstrap-logo-vector.svg"></span>
+                    <span><img class="logo-tecnologia" src="img/new-php-logo.svg" width="55px">
+                    </span>
+                    <span><img class="logo-tecnologia" src="img/mysql.png"></span>
+                </div>
+
+                <br>
+                <span class="subtitulo-sistema-br">Tipo:</span>
+                <span>TCC</span>
+                <br>
+                <hr />
+                <span class="subtitulo-sistema-br">Login administrativo:</span><br>
+                <span class="subtitulo-sistema-br">Usuario: </span><span>admin</span>
+                <br>
+                <span class="subtitulo-sistema-br">Senha: </span><span>senha123</span>
+                <br><br>
+                <div class="subtitulo-sistema-br">Login funcionario</div><br>
+                <span class="subtitulo-sistema-br">Usuario: </span><span>funcionario</span>
+                <br>
+                <span class="subtitulo-sistema-br">Senha: </span><span>senha123</span>
+
+                <hr />
+                <a href="https://maissaude.antonystar.com/" target="_blank" class="bt-testar">Testar</a>
+                <a href="https://github.com/antonystar-dev/maissaude" target="_blank" class="bt-github">GitHub</a>
+                <a href="#" class="bt-screen">Screenshot</a><BR>
+                <br>
+                <span class="subtitulo-sistema-br">Atualizações futuras:</span><br><span>
+                    Não pretendo atualiza-lo, mas sua base serve de expiração para os demais sistemas
+                    projetados.</span><br><br>
+                <div class="alerta-situacao-pronto">PRONTO</div>
+            </div>
+            <!---SISTEMA 3-->
+            <div class="sistema3">
+                <h4 class="titulo-sistema-az">WEB PORTAL CURSOS</h4>
+                <span class="subtitulo-sistema-az">Função:</span>
+                <p>
+                    Plataforma na qual agrupa links de afiliados para venda de cursos, podendo genciar links
+                    promocionais, padrões e venda direta.
+                </p>
+                <span class="subtitulo-sistema-az">Tecnologias:</span>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/html-logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/css-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/js-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/bootstrap-logo-vector.svg"></span>
+                    <span><img class="logo-tecnologia" src="img/new-php-logo.svg" width="55px">
+                    </span>
+                    <span><img class="logo-tecnologia" src="img/mysql.png"></span>
+                </div>
+
+                <br>
+                <span class="subtitulo-sistema-az">Tipo:</span>
+                <span>Pessoal</span>
+                <br>
+                <hr />
+                <span class="subtitulo-sistema-az">Login administrativo:</span><br>
+                <span class="subtitulo-sistema-az">Usuario: </span><span>admin</span>
+                <br>
+                <span class="subtitulo-sistema-az">Senha: </span><span>senha123</span>
+
+
+                <hr />
+                <a href="https://wpc.antonystar.com/" target="_blank" class="bt-testar">Testar</a>
+                <a href="https://github.com/antonystar-dev/wpc" target="_blank" class="bt-github">GitHub</a>
+                <a href="#" class="bt-screen">Screenshot</a><BR>
+                <br>
+                <span class="subtitulo-sistema-az">Atualizações futuras:</span><br><span>
+                    Não pretendo atualiza-lo, mas sua base serve de expiração para os demais sistemas
+                    projetados.</span><br><br>
+                <div class="alerta-situacao-pronto">PRONTO</div>
+            </div>
+            <span class="alerta-span">Os bancos de dados dos projetos são resetados para o padrão a cada 5 horas na
+                qual
+                podem realizar testes nos sistemas para verificar suas funcionalidades. Não é permitido o uso dos
+                sistemas
+                para outras atividades que não seja para teste e avaliação dos sistemas. Não cadastrar informações
+                sensiveis, visto que qualquer pessoa pode consultar dentro das 5 horas vigente. O sistema 2Fatores
+                não
+                disponibiliza informações de outros usuarios, portanto o cadastro feito no sistema disponibiliza
+                somente a conta de usuario comum.</span>
+
+
+
+            <div class="teste-fim">REMOVER</div>
         </div><!--Fim da VIEWPORT levar na separação de conteudo-->
-
-
-
-
-
-
-
 
 
     </div>
