concusão pg sistemas, tecnologias

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="div-viewport-projetos">
                 <h2 class="titulo-identificador">Projetos</h2>
             </div>
-            <!---SISTEMA 1-->
+            <!--SISTEMA 1-->
             <div class="sistema1">
                 <h4 class="titulo-sistema-az">LOGIN DE 2 FATORES</h4>
                 <span class="subtitulo-sistema-az">Função:</span>
@@ -248,11 +248,100 @@
                 disponibiliza informações de outros usuarios, portanto o cadastro feito no sistema disponibiliza
                 somente a conta de usuario comum.</span>
 
+            <!--Pequenos sistemas-->
+            <div class="div-viewport-sistema">
+                <h2 class="titulo-identificador">Sistemas</h2>
+                <p class="txt-br-center">Esse setor trata de alguns sistemas desenvolvidos que achei interessante expor
+                    no portifólio</p>
+            </div>
 
 
-            <div class="teste-fim">REMOVER</div>
+            <!--subSistema1-->
+            <div class="subSistema1">
+                <p class="subtitulo-sistema-br">CRUD CAPITAL CURSOS</p>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/html-logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/css-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/js-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/bootstrap-logo-vector.svg"></span>
+                    <span><img class="logo-tecnologia" src="img/new-php-logo.svg" width="55px">
+                    </span>
+                    <span><img class="logo-tecnologia" src="img/mysql.png"></span>
+                </div>
+                <a href="#" target="_blank" class="bt-github">GitHub</a>
+                <a href="capital.html" target="_blank" class="bt-testar">Testar</a>
+                <a href="#" target="_blank" class="bt-screen">Sobre</a>
+            </div>
+            <!--subSistema2-->
+            <div class="subSistema2">
+                <p class="subtitulo-sistema-br">API marca de carro</p>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/java-logo.png" title="HTML"></span>
+
+                </div>
+                <a href="#" target="_blank" class="bt-github">GitHub</a>
+                <a href="#" target="_blank" class="bt-testar">Testar</a>
+                <a href="#" target="_blank" class="bt-screen">Sobre</a>
+            </div>
+            <!--subSistema3-->
+            <div class="subSistema3">
+                <p class="subtitulo-sistema-br">Portifolio 2.0</p>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/html-logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/css-logo.png"></span>
+                    <span><img class="logo-tecnologia" src="img/js-logo.png"></span>
+
+                    <span><img class="logo-tecnologia" src="img/new-php-logo.svg" width="55px">
+                    </span>
+                    <span><img class="logo-tecnologia" src="img/mysql.png"></span>
+                </div>
+                <a href="#" target="_blank" class="bt-github">GitHub</a>
+                <a href="#" target="_blank" class="bt-testar">Testar</a>
+                <a href="#" target="_blank" class="bt-screen">Sobre</a>
+            </div>
+            <!--subSistema4-->
+            <div class="subSistema4">
+                <p class="subtitulo-sistema-br">Em breve</p>
+                <div class="div-logo-tecnologia">
+                    <span><img class="logo-tecnologia" src="img/logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/logo.png" title="HTML"></span>
+                    <span><img class="logo-tecnologia" src="img/logo.png" title="HTML"></span>
+                </div>
+                <a href="#" target="_blank" class="bt-github">GitHub</a>
+                <a href="#" target="_blank" class="bt-testar">Testar</a>
+                <a href="#" target="_blank" class="bt-screen">Sobre</a>
+            </div>
+
+
+            <!--Tecnologias-->
+            <div class="div-viewport-tecnologia">
+                <h2 class="titulo-identificador">Tecnologias</h2>
+                <p class="txt-br-center">Esse setor trata de algumas tecnologias que conheço:</p>
+            </div>
+            <div class="tecnologias-div">
+
+                <span><img class="logo-geral-tecnologia" src="img/html-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/css-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/js-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/bootstrap-logo-vector.svg" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/new-php-logo.svg" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/mysql.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/python-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/cp-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/java-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/linux-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/win-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/prox-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/docker-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/vscode-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/git-logo.png" title="HTML"></span>
+                <span><img class="logo-geral-tecnologia" src="img/host-logo.png" title="HTML"></span>
+
+            </div>
+            <!---->
+            <div class="footer">RODAPE</div>
         </div><!--Fim da VIEWPORT levar na separação de conteudo-->
-
 
     </div>
     </div>
