levantamento do que falta corrigir.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="central">
 
         <div class="div-viewport">
-            <!--DIV COLUNAS - BASE-->
-
+            <!--DIV COLUNAS - BASE
             <div class="col1">1</div>
             <div class="col2">2</div>
             <div class="col3">3</div>
@@ -34,10 +33,7 @@
             <div class="col10">10</div>
             <div class="col11">11</div>
             <div class="col12">12</div>
-
-
-
-            <!--DIV COLUNAS - BASE-->
+            DIV COLUNAS - BASE-->
 
 
             <!---->
